# enigma

./: .gitignore  README.md  com.github.subhadeepjasu.enigma  com.github.subhadeepjasu.enigma.yml  install.py  meson.build  post_install.py  setup.py  setup_routine_meson.py
.github/workflows/: ci.yml
_build/: .ninja_log  build.ninja
_build/data/: com.github.subhadeepjasu.enigma.appdata.xml
_build/meson-logs/: install-log.txt  meson-log.txt
data/: Application.css  com.github.subhadeepjasu.enigma.appdata.xml  com.github.subhadeepjasu.enigma.appdata.xml.in  com.github.subhadeepjasu.enigma.css  com.github.subhadeepjasu.enigma.desktop  com.github.subhadeepjasu.enigma.desktop.in  meson.build
debian/: changelog  control  copyright
enigma/: constants.py  enigma.py  headerbar.py  keyboard.py  lampboard.py  main.py  plug.py  plugboard_ui.py  rotor_selector.py  rotorboard.py  scratch_pad.py  window.py
enigma/emulator/: .main.py  emulator.py  enigma_machine.py
enigma/emulator/components/: plugboard.py  reflector.py  rotor.py
po/: meson.build
po/extra/: POTFILES  meson.build
